[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/entities/player/foot_controller.gd" type="Script" id=1]
[ext_resource path="res://addons/smoothing/smoothing.gd" type="Script" id=2]
[ext_resource path="res://assets/entities/player/weapon_controller.gd" type="Script" id=3]
[ext_resource path="res://assets/entities/player/movement_machine/movement_machine.gd" type="Script" id=4]
[ext_resource path="res://assets/entities/player/character.gd" type="Script" id=5]
[ext_resource path="res://assets/entities/player/camera.gd" type="Script" id=6]
[ext_resource path="res://assets/entities/player/stance_machine/stance_machine.gd" type="Script" id=7]
[ext_resource path="res://assets/entities/player/air_machine/up.gd" type="Script" id=8]
[ext_resource path="res://assets/entities/player/air_machine/ground.gd" type="Script" id=9]
[ext_resource path="res://assets/entities/player/air_machine/land.gd" type="Script" id=10]
[ext_resource path="res://assets/entities/player/breath_machine/breath_machine.gd" type="Script" id=11]
[ext_resource path="res://assets/entities/player/aim_machine/aim.gd" type="Script" id=12]
[ext_resource path="res://assets/entities/player/aim_machine/aim_machine.gd" type="Script" id=13]
[ext_resource path="res://assets/entities/player/air_machine/down.gd" type="Script" id=14]
[ext_resource path="res://assets/entities/player/movement_machine/idle.gd" type="Script" id=15]
[ext_resource path="res://assets/entities/player/breath_machine/hold.gd" type="Script" id=16]
[ext_resource path="res://assets/entities/player/ui/ui.gd" type="Script" id=17]
[ext_resource path="res://assets/entities/player/ui/ammo_ui.gd" type="Script" id=18]
[ext_resource path="res://assets/entities/humanoid/skeleton.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/entities/player/stance_machine/crouch.gd" type="Script" id=20]
[ext_resource path="res://assets/entities/player/stance_machine/stand.gd" type="Script" id=21]
[ext_resource path="res://assets/entities/player/movement_machine/sprint.gd" type="Script" id=22]
[ext_resource path="res://assets/entities/player/aim_machine/hip.gd" type="Script" id=23]
[ext_resource path="res://assets/entities/player/breath_machine/release.gd" type="Script" id=24]
[ext_resource path="res://assets/entities/player/movement_machine/walk.gd" type="Script" id=25]
[ext_resource path="res://assets/entities/player/stance_machine/prone.gd" type="Script" id=26]
[ext_resource path="res://assets/entities/player/air_machine/air_machine.gd" type="Script" id=27]

[sub_resource type="CapsuleShape" id=1]
radius = 0.8
height = 3.1

[node name="Character" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.35, 0 )
shape = SubResource( 1 )

[node name="Smoothing" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="RotationHelper" type="Spatial" parent="Smoothing"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.4, 0 )

[node name="Head" type="Spatial" parent="Smoothing/RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.425351, 0 )

[node name="Camera" type="Camera" parent="Smoothing/RotationHelper/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.458991, -0.129674 )
far = 1000.0
script = ExtResource( 6 )

[node name="WeaponController" type="Spatial" parent="Smoothing/RotationHelper/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.535547, -0.551402, -1.06965 )
script = ExtResource( 3 )

[node name="Smoothing" type="Spatial" parent="Smoothing/RotationHelper/Head"]
script = ExtResource( 2 )
target = NodePath("../WeaponController")

[node name="Position3D" type="Position3D" parent="Smoothing/RotationHelper/Head"]

[node name="Foot controller" type="Spatial" parent="Smoothing/RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.4, 0 )
script = ExtResource( 1 )

[node name="LSphere" type="Spatial" parent="Smoothing/RotationHelper/Foot controller"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.5, 0 )

[node name="LeftLeg" type="Position3D" parent="Smoothing/RotationHelper/Foot controller/LSphere"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -0.5, 0 )

[node name="RSphere" type="Spatial" parent="Smoothing/RotationHelper/Foot controller"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.5, 0 )

[node name="RightLeg" type="Position3D" parent="Smoothing/RotationHelper/Foot controller/RSphere"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -0.5, 0 )

[node name="Skeleton" parent="Smoothing/RotationHelper" instance=ExtResource( 19 )]
bones/0/bound_children = [ NodePath("Hips") ]
bones/1/bound_children = [ NodePath("Waist") ]
bones/2/bound_children = [ NodePath("Chest") ]
bones/4/bound_children = [ NodePath("UpperArmL") ]
bones/5/bound_children = [ NodePath("ForearmL") ]
bones/6/bound_children = [ NodePath("HandL") ]
bones/8/bound_children = [ NodePath("UpperArmR") ]
bones/9/bound_children = [ NodePath("ForearmR") ]
bones/10/bound_children = [ NodePath("HandR") ]
bones/11/bound_children = [ NodePath("Head") ]
bones/12/bound_children = [ NodePath("ThighL") ]
bones/13/bound_children = [ NodePath("ShinL") ]
bones/14/bound_children = [ NodePath("FootL") ]
bones/15/bound_children = [ NodePath("ThighR") ]
bones/16/bound_children = [ NodePath("ShinR") ]
bones/17/bound_children = [ NodePath("FootR") ]

[node name="StanceMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Stand" type="Node" parent="StanceMachine"]
script = ExtResource( 21 )

[node name="Crouch" type="Node" parent="StanceMachine"]
script = ExtResource( 20 )

[node name="Prone" type="Node" parent="StanceMachine"]
script = ExtResource( 26 )

[node name="MovementMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="MovementMachine"]
script = ExtResource( 15 )

[node name="Walk" type="Node" parent="MovementMachine"]
script = ExtResource( 25 )

[node name="Sprint" type="Node" parent="MovementMachine"]
script = ExtResource( 22 )

[node name="AimMachine" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Aim" type="Node" parent="AimMachine"]
script = ExtResource( 12 )

[node name="Hip" type="Node" parent="AimMachine"]
script = ExtResource( 23 )

[node name="AirMachine" type="Node" parent="."]
script = ExtResource( 27 )

[node name="Ground" type="Node" parent="AirMachine"]
script = ExtResource( 9 )

[node name="Up" type="Node" parent="AirMachine"]
script = ExtResource( 8 )

[node name="Down" type="Node" parent="AirMachine"]
script = ExtResource( 14 )

[node name="Land" type="Node" parent="AirMachine"]
script = ExtResource( 10 )

[node name="BreathMachine" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Release" type="Node" parent="BreathMachine"]
script = ExtResource( 24 )

[node name="Hold" type="Node" parent="BreathMachine"]
script = ExtResource( 16 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Radar" type="Panel" parent="UI"]
self_modulate = Color( 1, 1, 1, 0.878431 )
anchor_top = 0.622
anchor_right = 0.193
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Panel" parent="UI"]
self_modulate = Color( 1, 1, 1, 0.878431 )
anchor_left = 0.815
anchor_top = 0.869
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
mouse_filter = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Ammo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.52588e-05
margin_bottom = 7.62939e-06
mouse_filter = 2
custom_constants/separation = 8

[node name="Magazine" type="Label" parent="UI/Ammo/HBoxContainer"]
margin_top = 63.0
margin_right = 24.0
margin_bottom = 77.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "N/A"
[connection signal="camera_movement" from="." to="Smoothing/RotationHelper/Head/WeaponController" method="_on_Character_camera_movement"]
[connection signal="camera_movement" from="." to="Smoothing/RotationHelper/Head/Camera" method="_on_Character_camera_movement"]
[connection signal="shot_fired" from="." to="Smoothing/RotationHelper/Head/WeaponController" method="_on_Character_shot_fired"]
[connection signal="shot_fired" from="." to="Smoothing/RotationHelper/Head/Camera" method="_on_Character_shot_fired"]
[connection signal="update_accuracy" from="." to="Smoothing/RotationHelper/Head/WeaponController" method="_on_Character_update_accuracy"]
[connection signal="update_accuracy" from="." to="Smoothing/RotationHelper/Head/Camera" method="_on_Character_update_accuracy"]
[connection signal="update_ammo" from="." to="UI/Ammo" method="_on_Character_update_ammo"]
[connection signal="weapon_changed" from="." to="Smoothing/RotationHelper/Head/WeaponController" method="_on_Character_weapon_changed"]
[connection signal="set_process" from="Smoothing/RotationHelper/Head/WeaponController" to="Smoothing/RotationHelper/Head/Camera" method="_on_WeaponController_set_process"]
[connection signal="shot_fired" from="Smoothing/RotationHelper/Head/WeaponController" to="Smoothing/RotationHelper/Head/Camera" method="_on_WeaponController_shot_fired"]
[connection signal="jump" from="AirMachine" to="." method="_on_AirMachine_jump"]
